--- a/Source/pug/crew.pug
+++ b/Source/pug/crew.pug
@@ -33,50 +33,22 @@ mixin makeupgrade(number, numboxes, def, desc)
 				+text-input('crew_name')
 				.label.text.title(data-i18n='name')
 			label.col45
-				+text-input('reputation')
-				.label.text.title(data-i18n='reputation')
-			label.col100
+				+text-input('goal')
+				.label.text.title(data-i18n='goal')
+			label.col55
 				+text-input('lair')
 				.label.text.title(data-i18n='lair')
-			//- Deity and origin fields. Can be deleted safely.
-			if (showDeityOrigin)
-				+hidden-input('setting_show_deity')(value='0').hider
-				label.col55
-					+text-input('crew_deity')
-					.label.text.title
-						span(data-i18n='deity')
-				+hidden-input('setting_show_deity')(value='0').hider
-				label.col45
-					+text-input('crew_deity_features')(data-i18n-placeholder='choose_2_features')
-					+hidden-input('crew_deity_features')(value='')
-					.text
-						span.label.title
-							span(data-i18n='deity').space-after
-							span(data-i18n='features')
-						span.uppercase.info(data-i18n='deity_features_info')
-				+hidden-input('setting_show_origin')(value='0').hider
-				label.col100
-					+text-input('origin')
-					.label.text.title(data-i18n='origin')
+			label.col45
+				+text-input('district')
+				.label.text.title(data-i18n='district')
+			label.col55
+				+text-input('hunting grounds')
+				.label.text.title(data-i18n='hunting_grounds')
+			label.col45
+				+text-input('method')
+				.label.text.title(data-i18n='method')
 		// Rep, Hold, and Tier
 		.col100.flex.rep-and-hold.def-margin
-			.rep.flex.col45
-				.rep1.blackheader
-					.label(data-i18n='rep')
-				.rep2.blackborder.flex
-					.turfbox
-						each num in range(1,6)
-							+radio('turf')(value=num)
-					+hidden-input('turf')(value='0').turf-input
-					+radio('rep')(value='0', checked).tooth.zero
-					//- generates 12 rep boxes. The complicated code for the class assigns the necessary CSS classes for turf to work correctly
-					each num in range(1,12)
-						+radio('rep')(class=['tooth', 'stresstooth', ...((num < 6) ? [] : [...Array(num-6).keys()].map(x => `turf${6-x}`))], value=num)
-				.rep3.blackborder
-					.black-on-grey
-						.label(data-i18n='turf')
-					.turfzero-holder
-						+radio('turf')(value='0', checked).zero
 			// Hold
 			.hold.flex
 				.hold1.blackheader
@@ -98,43 +70,6 @@ mixin makeupgrade(number, numboxes, def, desc)
 					//- generates 4 tier circles
 					each num in range(1,4)
 						+checkbox('crew_tier')(value=num).checkbox.circlebox.fakeradio
-		// Claims
-		.claims.col100.free-repcontrol
-			.claimsrow.flex
-				each num in range(1,5)
-					+claimbox(num)
-					if (num !== 5)
-						+claimbridge(`${num}_${num+1}`, 'hori')
-			.claims-seprow.flex
-				each num in range(1,5)
-					+claimbridge(`${num}_${num+5}`, 'vert')
-			.claimsrow.flex
-				+claimbox(6)
-				+claimbridge('6_7', 'hori')
-				+claimbox(7)
-				+claimbridge('7_8', 'hori')
-				.lairbox.flex-center.uppercase(data-i18n='lair')
-				+claimbridge('8_9', 'hori')
-				+claimbox(9)
-				+claimbridge('9_10', 'hori')
-				+claimbox(10)
-			.claims-seprow.flex
-				each num in range(6,10)
-					+claimbridge(`${num}_${num+5}`, 'vert')
-			.claimsrow.flex
-				each num in range(11,15)
-					+claimbox(num)
-					if (num !== 15)
-						+claimbridge(`${num}_${num+1}`, 'hori')
-			fieldset.repeating_claim
-				.claims-seprow.flex
-					each num in range(1,5)
-						+claimbridge(`top_${num}`, 'vert')
-				.claimsrow.flex
-					each num in range(1,5)
-						+claimbox(num)
-						if (num !== 5)
-							+claimbridge(`${num}_${num+1}`, 'hori')
 		// Heat and Coin
 		.col100.flex.heat-and-vault.def-margin
 			// Heat
@@ -150,13 +85,13 @@ mixin makeupgrade(number, numboxes, def, desc)
 				// Wanted Level
 				.heat3
 					.blackheader
-						+roll('Wanted', '{{vice=1}} {{short=1}} {{title=^{entanglement}}} {{subtitle=^{wantedroll1}@{heat}&nbsp;^{heat}^{wantedroll2}}} @{wanted_formula}')(data-i18n='wanted').label.inherit.rollbutton
+						+roll('Noteriety', '{{vice=1}} {{short=1}} {{title=^{entanglement}}} {{subtitle=^{wantedroll1}@{heat}&nbsp;^{heat}^{wantedroll2}}} @{wanted_formula}')(data-i18n='noteriety').label.inherit.rollbutton
 						+hidden-input('wanted_formula')(value=zerodiceFormula)
 					.wantedholder.flex
-						+radio('wanted')(value='0', checked).tooth.zero
+						+radio('noteriety')(value='0', checked).tooth.zero
 						//- generates 4 wanted boxes
 						each num in range(1,4)
-							+radio('wanted')(value=num).tooth.regulartooth
+							+radio('noteriety')(value=num).tooth.regulartooth
 			// Coin
 			.crewcoin.col52b
 				.col100.flex
@@ -203,8 +138,8 @@ mixin makeupgrade(number, numboxes, def, desc)
 				li
 					+autoexpand('xp_condition_extra')(data-i18n-placeholder='xp_specific_extra')
 				li(data-i18n='xp_contend')
-				li(data-i18n='xp_bolster')
-				li(data-i18n='xp_express')
+				li(data-i18n='xp_advance')
+				li(data-i18n='xp_changerep')
 	// Right column
 	.col45.flex-wrap.right-column
 		// Crew Type
@@ -220,7 +155,7 @@ mixin makeupgrade(number, numboxes, def, desc)
 		.col53.small-margin
 			// Upgrades
 			.itemheader.col100
-				span.label(data-i18n='crew_upgrades')
+				span.label(data-i18n='crew_assets')
 			.itemholder.col100.upgrades
 				// Specific upgrades
 				.playbookitems.col100.free-repcontrol
@@ -242,54 +177,30 @@ mixin makeupgrade(number, numboxes, def, desc)
 						.item-description
 							+checkbox('expand').expand
 							+textarea('description')(data-i18n-placeholder='description')
-				// Regular upgrades
-				.regularitems.flex-wrap.col100
-					.item.col50
-						span.label(data-i18n='lair')
-					.item.col50
-						span.label(data-i18n='quality')
-					+makeupgrade(6, 2, 'carriage', 'upgrade_carriage_description')
-					+makeupgrade(7, 1, 'documents', 'upgrade_documents_description')
-					+makeupgrade(8, 2, 'boat', 'upgrade_boat_description')
-					+makeupgrade(9, 1, 'gear', 'upgrade_gear_description')
-					+makeupgrade(10, 1, 'hidden', 'upgrade_hidden_description')
-					+makeupgrade(11, 1, 'implements', 'upgrade_implements_description')
-					+makeupgrade(12, 1, 'quarters', 'upgrade_quarters_description')
-					+makeupgrade(13, 1, 'supplies', 'upgrade_supplies_description')
-					+makeupgrade(14, 2, 'secure', 'upgrade_secure_description')
-					+makeupgrade(15, 1, 'tools', 'upgrade_tools_description')
-					+makeupgrade(16, 2, 'vault', 'upgrade_vault_description')
-					+makeupgrade(17, 1, 'weapons', 'upgrade_weapons_description')
-					+makeupgrade(18, 1, 'workshop', 'upgrade_workshop_description')
-					.item.col50
-					.item.upgradecaption.col50
-						span.label(data-i18n='training')
-					.item.upgradecaption.col50
-						span.label(data-i18n='cohorts')
-					+makeupgrade(20, 1, 'insight', 'upgrade_insight_description')
-					.item.col50
-						.label.upgradecosts(data-i18n='upgrade_costs')
-					+makeupgrade(21, 1, 'prowess', 'upgrade_prowess_description')
-					.item.col50
-						.upgradecosts(data-i18n='new_cohort')
-					+makeupgrade(22, 1, 'resolve', 'upgrade_resolve_description')
-					.item.col50
-						.upgradecosts(data-i18n='add_type')
-					+makeupgrade(23, 1, 'personal', 'upgrade_personal_description')
-					.col100
+			// Upgrades
+			.itemheader.col100
+				span.label(data-i18n='crew_gadgets')
+			.itemholder.col100.upgrades
+				// Specific upgrades
+				.playbookitems.col100.free-repcontrol
+					fieldset.repeating_gadgets
+						+hidden-input('boxes_chosen_gadgets')(value='0').boxes-chosen
+						.item.numboxes-chooser
+							div(data-i18n='how_many_boxes')
+							+number-input('numboxes')(min='1', max='3', value='1')
+							label
+								+checkbox('boxes_chosen_gadgets')(data-i18n='ok')
 						.item
-							each num in range(1,4)
-								+checkbox(`upgrade_24_check_${num}`).checkbox.squarebox
-								if (num < 4)
-									span.floatingbar
-							+text-input('upgrade_24_name', 'mastery').itemname
+							+hidden-input('numboxes')(value='1').numboxes
+							+checkbox('check_gadget_1').checkbox.squarebox
+							span.floatingbar.boxesgeq2
+							+checkbox('check_gadget_2', 'boxesgeq2').checkbox.squarebox
+							span.floatingbar.boxesgeq3.boxesgeq2
+							+checkbox('check_gadget_3', 'boxesgeq2 boxesgeq3').checkbox.squarebox
+							+autoexpand('name')(data-i18n-placeholder='an_upgrade').itemname
 						.item-description
-							+checkbox('upgrade_24_expand').expand
-							+textarea('upgrade_24_description', 'upgrade_mastery_description')(data-i18n-placeholder='description')
-			.hunting-grounds.col100.def-margin
-				+autoexpand('hunting_grounds_type')(data-i18n-placeholder='hunting_grounds').plainheader.label
-				+autoexpand('hunting_grounds_description')(data-i18n-placeholder='hunting_grounds_description').description
-			+fortuneroll('Engagement', '{{action=1}} {{short=1}} {{small-title=1}} {{subtitle=^{roll_for}}} {{title=^{engagement}}}')(data-i18n='roll_engagement').engagementbutton.borderbutton
+							+checkbox('expand').expand
+							+textarea('description')(data-i18n-placeholder='description')
 		// Cohorts and Contacts
 		.col47.right-column.small-margin
 			// First Cohort
@@ -311,11 +222,4 @@ mixin makeupgrade(number, numboxes, def, desc)
 							+autoexpand('name')(data-i18n-placeholder='contact_name')
 						+checkbox(null).expand
 						+textarea('description')(data-i18n-placeholder='notes').description
-			// Roll Fortune
-			+fortuneroll('Fortune_crew', '{{fortune=1}} {{subtitle=^{roll}}} {{title=^{fortune}}}', true)(data-i18n='roll_fortune').fortunebutton.borderbutton
-		// Clocks
-		.col100.clocks.def-margin.free-repcontrol
-			.specialheader.label(data-i18n='clocks')
-			fieldset.repeating_crewclock
-				+makeclock
 		+textarea('crew_notes')(data-i18n-placeholder='notes').notes
