--- a/Source/blades.pug
+++ b/Source/blades.pug
@@ -160,6 +160,9 @@ mixin makeclock(isFaction)
 +hidden-input('bonusdice')(value='Bonus dice')
 +hidden-input('advdis_query')(value='?{Are you rolling with Advantage or Disadvantage?|Neither,2d6|Advantage,2d6+1[with Advantage]|Disadvantage,3d6-1[with Disadvantage]}')
 +hidden-input('harm_query')(value='?{Level of harm?|No harm,0|Level 1 Harm,-1|Level 2 Harm,-2|Level 3 Harm,-3}')
++hidden-input('forward_query')(value='?{Any plus or minus?|0}')
++hidden-input('bonus_query')(value=`?{What Action did you use?|Push Yourself,Push Yourself|Gain An Assist,Gain An Assist|Devil's Bargain, Devil's Bargain}`)
++hidden-input('action_used')(value=`?{Where did you get the bonus from?|Wreck,@{wreck}|Move,@{move}|Hunt,@{hunt}|Tinker,@{tinker}|Study,@{study}|Talk,@{talk}|Connect,@{connect}}`)
 +hidden-input('notes_query')(value='?{Notes}')
 +hidden-input('consequence_query')(value='^{a_consequence}')
 
