--- a/Source/pug/character.pug
+++ b/Source/pug/character.pug
@@ -14,34 +14,33 @@
 			label.col45
 				+text-input('alias')
 				.label.text.title(data-i18n='alias')
-			label.col100
+			label.col55
 				+text-input('look')
 				.label.text.title(data-i18n='look')
-			label.col100
+			label.col45
+				+text-input('mask')
+				.label.text.title(data-i18n='mask')
+			label.col55
 				+autoexpand('neighbourhood')
 				+hidden-input('neighbourhood')(value='')
-				.text
-					span.label.title(data-i18n='neighbourhood')
-					span.uppercase.info(data-i18n='neighbourhood_info')
-			label.col100
-				+autoexpand('oldjob')
-				+hidden-input('oldjob')(value='')
-				.text
-					span.label.title(data-i18n='oldjob')
+				.label.text.title(data-i18n='neighbourhood')
+					//- span.uppercase.info(data-i18n='neighbourhood_info')
+			label.col45
+				+autoexpand('old_job')
+				+hidden-input('old_job')(value='')
+				.label.text.title(data-i18n='old_job')
 			+hidden-input('setting_old_habit_type')(value='normal').vice-input
-			label.col45.vice.normal
-				+autoexpand('old_habit')
-				+hidden-input('old_habit')(value='')
+			label.col100.vice.normal
+				+autoexpand('bad_habit')
+				+hidden-input('bad_habit')(value='')
 				.text
-					span.label.title(data-i18n='old_habit')
-					span.uppercase.info(data-i18n='old_habit_info')
-			label.col55.vice.normal
+					span.label.title(data-i18n='bad_habit')
+					span.uppercase.info(data-i18n='bad_habit_info')
+			label.col100.vice.normal
 				+autoexpand('goal')
 				+hidden-input('goal')(value='')
 				.text
 					span.label.title(data-i18n='goal')
-				//- +roll('Vice', '{{{{subtitle=^{viceroll1}@{stress}&nbsp;@{setting_stress_label}^{viceroll2}}} {{vice=1}} {{title=^{vice}}} @{vice_formula}')(data-i18n='indulge_vice').vicebutton.borderbutton
-				//- +hidden-input('vice_formula')(value=zerodiceFormula)
 			//- Special vice sections for spirit playbooks. You can safely delete the following three elements if you don't need variant vices
 		// Stress and Trauma
 		.col35.flex.stress.def-margin
@@ -53,6 +52,17 @@
 				+radio('hutzpah')(value='5', checked).tooth.zero
 				each num in range(1,6)
 					+radio('hutzpah')(value=num).tooth.stresstooth
+		.col10.flex
+		// Stress and Trauma
+		.col15.flex.stress.def-margin
+			// Stress markers
+			.stress1.blackheader
+				.label
+					span(data-i18n='prep')
+			.stress2.blackborder.flex
+				+radio('prep')(value='2', checked).tooth.zero
+				each num in range(1,2)
+					+radio('prep')(value=num).tooth.stresstooth
 		// Harm, Healing, Armor, Coin
 		.col100.flex.def-margin
 			// Harm
@@ -62,13 +72,15 @@
 				.harmbody
 					.flex-center.harmnumber 3
 					+textarea('harm3').twocols
-					.flex-center.harmeffect(data-i18n='minus3')
+					.flex-center.harmeffect(data-i18n='need_help')
 					.flex-center.harmnumber 2
-					+textarea('harm2').twocols
-					.flex-center.harmeffect(data-i18n='minus2')
-					.flex-center.harmnumber 1
-					+textarea('harm1').twocols
+					+textarea('harm2_1')
+					+textarea('harm2_2')
 					.flex-center.harmeffect(data-i18n='minus1')
+					.flex-center.harmnumber 1
+					+textarea('harm1_1')
+					+textarea('harm1_2')
+					.flex-center.harmeffect(data-i18n='less_effect')
 			// Armor, Healing and Coin
 			.col37.flex-wrap
 				.col45
@@ -194,7 +206,7 @@
 							each num in range(1,3)
 								+radio(`${action}`)(value=num).tooth.checkbox.squarebox.stresstooth
 						.action-title.uppercase
-							+roll(action, '{{action=1}} {{subtitle=^{rolls}}} {{title=^{'+action+'}}} {{result=[[{@{advdis_query} + @{harm_query} + @{'+action+'}}]]}}')(data-i18n=action, data-i18n-title=`${action}_description`).rollbutton.label
+							+roll(action, '{{action=1}} {{subtitle=^{rolls}}} {{title=^{'+action+'}}} {{result=[[{2d6 + (@{forward_query}) + @{'+action+'}}]]}}')(data-i18n=action, data-i18n-title=`${action}_description`).rollbutton.label
 						.action-description(data-i18n=`${action}_description`)
 						+hidden-input(`${action}`)(value='0')
 				//- each attribute in actionData
@@ -204,8 +216,24 @@
 				//- 				'{{resist=1}} {{subtitle=^{resists} @{consequence_query} ^{with}}} {{title=^{'+attribute+'}}} @{'+attribute+'_formula}')(data-i18n=attribute, data-i18n-title=`${attribute}_description`).rollbutton.label
 				//- 			+hidden-input(`${attribute}`)(value='0')
 				//- 			+hidden-input(`${attribute}_formula`)(value=zerodiceFormula)
+		// Bonus die box
+		.bonusdie.col100
+			.col100.flex
+				.flex-center.bonusdieplus REROLL!
+					+roll(bonus, '{{action=1}} {{title=@{bonus_query}}} {{result=[[2d6 + @{action_used}]]}}')(data-i18n=bonus, data-i18n-title=`${bonus}_description`).rollbutton.label
+			.col100.flex
+				.bonusdietext
+					.label(data-i18n='push_yourself')
+					span(data-i18n='push_yourself_desc1')
+					span(data-i18n='push_yourself_notes1')
+					span(data-i18n='push_yourself_desc2')
+					.label(data-i18n='gain-assist')
+					span(data-i18n='push_yourself_notes2')
+					span(data-i18n='push_yourself_desc3')
+					.label(data-i18n='devils_bargain')
+					span(data-i18n='push_yourself_notes3')
 		// Items and Planning
-		.col53.itemcolumn.small-margin
+		.col100.itemcolumn.small-margin
 			// Load
 			.loadheader.flex.col100
 				.label(data-i18n='load')
@@ -299,7 +327,7 @@
 						+autoexpand('name')
 						+textarea('description').alchemicals-info
 			// Planning and Load
-			.planning.col100.def-margin
+			//- .planning.col100.def-margin
 				input.title-checkbox(type='checkbox', name='attr_show_planning', value='1', checked)
 				span.label.plainheader(data-i18n='planning_load')
 				.planning-content
@@ -330,17 +358,6 @@
 			// Cohort
 			+hidden-input('setting_show_cohort')(value='0').hider
 			+makecohort('char_cohort_', true)
-			// Bonus die box
-			.bonusdie.col100
-				.col100.label(data-i18n='bonus_die')
-				.col100.flex
-					.flex-center.bonusdieplus +
-					.bonusdietext
-						.label(data-i18n='push_yourself')
-						span(data-i18n='push_yourself_desc1')
-						span(data-i18n='hutzpah')
-						span(data-i18n='push_yourself_desc2')
-						.label(data-i18n='devils_bargain')
 			// Friends
 			.col100.def-margin.friends
 				.specialheader.col100.label.flex
@@ -356,8 +373,8 @@
 							+autoexpand('name')(data-i18n-placeholder='friend_name')
 						+checkbox(null).expand
 						+textarea('description')(data-i18n-placeholder='notes').description
-			// Roll Fortune
-			+fortuneroll('Fortune', '{{fortune=1}} {{subtitle=^{rolls}}} {{title=^{fortune}}}', true)(data-i18n='roll_fortune').fortunebutton.borderbutton
+			//- // Roll Fortune
+			//- +fortuneroll('Fortune', '{{fortune=1}} {{subtitle=^{rolls}}} {{title=^{fortune}}}', true)(data-i18n='roll_fortune').fortunebutton.borderbutton
 		// Clocks
 		.col100.clocks.def-margin.free-repcontrol
 			.specialheader.label(data-i18n='clocks')
